fixed popover on mobile & destroy on location change

--- a/client/private/scss/base/bootstrap-overwrite/_variables.scss
+++ b/client/private/scss/base/bootstrap-overwrite/_variables.scss
@@ -249,7 +249,7 @@ $dropdown-caret-color:           #000 !default;
 
 $zindex-navbar:            1000 !default;
 $zindex-dropdown:          1000 !default;
-$zindex-popover:           1010 !default;
+$zindex-popover:           1040 !default;
 $zindex-tooltip:           1030 !default;
 $zindex-navbar-fixed:      1030 !default;
 $zindex-modal-background:  1040 !default;
